add readme content for profile.d native memory dump